giropops-senhas/manifests/3. deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
  namespace: giropops-senhas
  labels:
    owner: "bravo"
  annotations:
    email: ramonboorges@gmail.com
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - name: giropops-senhas
        image: giropops-senhas-python-chainguard:local
        ports:
        - containerPort: 5000
          name: web
        resources:
          requests:
            cpu: 0.5
            memory: 64Mi
          limits:
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 3
      serviceAccountName: giropops-senhas
      dnsPolicy: ClusterFirst
